@@ -142,6 +142,7 @@ SETTING_DEFAULT = {
         "font_name": "consolas",
         "font_size": 15,
         "font_weight": "bold",
+        "enable_auto_font_offset": True,
         "font_offset_vertical": 0,
         "bar_padding_horizontal": 0.4,
         "bar_padding_vertical": 0.3,
@@ -221,6 +222,7 @@ SETTING_DEFAULT = {
         "font_name": "consolas",
         "font_size": 17,
         "font_weight": "bold",
+        "enable_auto_font_offset": True,
         "font_offset_vertical": 0,
         "bar_padding_horizontal": 0.6,
         "bar_padding_vertical": 0.4,
@@ -245,6 +247,7 @@ SETTING_DEFAULT = {
         "font_name": "consolas",
         "font_size": 30,
         "font_weight": "bold",
+        "enable_auto_font_offset": True,
         "font_offset_vertical": 0,
         "bar_padding_horizontal": 0.6,
         "bar_padding_vertical": 0.2,
@@ -404,6 +407,7 @@ SETTING_DEFAULT = {
         "font_name": "consolas",
         "font_size": 13,
         "font_weight": "bold",
+        "enable_auto_font_offset": True,
         "font_offset_vertical": 0,
         "display_size": 150,
         "display_radius_g": 3.2,
@@ -507,6 +511,7 @@ SETTING_DEFAULT = {
         "font_size": 44,
         "font_weight_gear": "bold",
         "font_weight_speed": "normal",
+        "enable_auto_font_offset": True,
         "font_offset_vertical": 0,
         "bar_padding_horizontal": 0.6,
         "bar_padding_vertical": 0.2,
@@ -811,6 +816,7 @@ SETTING_DEFAULT = {
         "font_name": "consolas",
         "font_size": 15,
         "font_weight": "bold",
+        "enable_auto_font_offset": True,
         "font_offset_vertical": 0,
         "bar_padding_horizontal": 0.4,
         "bar_padding_vertical": 0.3,
@@ -996,6 +1002,7 @@ SETTING_DEFAULT = {
         "font_name": "consolas",
         "font_size": 15,
         "font_weight": "bold",
+        "enable_auto_font_offset": True,
         "font_offset_vertical": 0,
         "bar_padding_horizontal": 0.4,
         "bar_padding_vertical": 0.3,
@@ -1102,6 +1109,7 @@ SETTING_DEFAULT = {
         "font_name": "consolas",
         "font_size": 15,
         "font_weight": "bold",
+        "enable_auto_font_offset": True,
         "font_offset_vertical": 0,
         "bar_padding": 0.5,
         "font_color": "#000000",
@@ -1141,6 +1149,7 @@ SETTING_DEFAULT = {
         "font_name": "consolas",
         "font_size": 15,
         "font_weight": "bold",
+        "enable_auto_font_offset": True,
         "font_offset_vertical": 0,
         "bar_padding_horizontal": 0.4,
         "bar_padding_vertical": 0.3,
